@@ -5,6 +5,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import data.Modulo;
 
@@ -26,6 +27,6 @@ public class LogicsFormazioneImpl implements LogicsFormazione {
 		
 		return posizioni.stream()
 				.map(p-> li.get(p))
-				.toList();
+				.collect(Collectors.toList());
 	}
 }
